--- a/templates/index/AboutMe.twig
+++ b/templates/index/AboutMe.twig
@@ -6,10 +6,10 @@
      src="{{ asset('gridbg.gif') }}" 
      alt="Other Image"/>
 
-    <div class="rounded-circle bg-dark border border-light">
+    <div class="rounded-circle bg-dark border border-light d-none d-md-block">
         <img class="m-2" style="height: 15vh; width: auto;" src="{{ asset('foundtexaspanda.svg') }}" alt="foundtexaspanda"/>
     </div>
-    <div class="rounded-trapezoid container-md bg-light opacity-75 p-1 d-flex flex-column align-items-center justify-content-center my-5" style="min-height: 35vh;">
+    <div class="rounded-trapezoid container-md bg-light opacity-75 p-1 d-flex flex-column align-items-center justify-content-center my-3" style="min-height: 35vh;">
         <div class=" container-fluid rounded-trapezoid bg-main-dark-translucent d-flex flex-column align-items-center justify-content-around" style="min-height: 35vh;">
             <div class="row mt-md-0 mt-md-3 m-1">
                 <h2 class="p-md-2 my-1 text-center accent-color"> <i class="fa fa-laptop fa-xs" aria-hidden="true"></i> Web & Game Dev <i class="fa fa-gamepad fa-md " aria-hidden="true"></i> </h2>
@@ -17,7 +17,7 @@
             <div class="row mx-4 mx-md-5">
                 <!-- Added 'typing-effect' class to apply the typing animation -->
                 <p class="typing-effect white-text text-justify text-lg m-1 fs-6">
-                    Greetings! Welcome to my corner of the web. I'm Rodolfo also known as FoundTexas. I'm a computer scientist specialized in 3D Graphics, with skill on Project Management, Web and Game Development. I`m a team player and believe that diverse perspectives fuel innovation, leading to significant and immersive experiences for the users.
+                    Greetings! Welcome to my corner of the web. I'm Rodolfo León, a computer scientist specialized in 3D Graphics, with skill on Project Management, Web and Game Development. I`m a team player and believe that diverse perspectives fuel innovation, leading to significant and immersive experiences for the users.
                 </p>
             </div>
             <div>
