--- a/templates/Projects.twig
+++ b/templates/Projects.twig
@@ -10,9 +10,13 @@
 
 {% block body %}
 
-	<section id="projects" class="bg-main-dark px-2" style="min-height: 100vh;">
+	<section id="projects" class="bg-main-dark px-2" style="min-height: 100vh; margin-top: -2vh;">
 
-		{% include 'index/IndexHeader.twig' with {'textRef': textRef, 'headText': headText, 'darkbg': true} %}
+		<div class="w-100 d-flex justify-content-center ">
+			<div class="bg-accent rounded-4 col-12 col-md-6  py-5 d-flex justify-content-center" href="#{{ textRef }}">
+				<span class="text-center text-capitalize white-text" style="font-size: 2.5rem;">{{ headText }}</span>
+			</div>
+		</div>
 
 		<div class="d-flex flex-column justify-content-center align-items-center" style="min-height: 75vh; width: 100%;">
 
