--- a/templates/index/ProjectsHighlights.twig
+++ b/templates/index/ProjectsHighlights.twig
@@ -9,7 +9,7 @@
 <section id="projects" class=" p-0" style="min-height: 100vh;">
 
 	<div class="w-100 d-flex justify-content-center ">
-		<div class="bg-accent rounded-4 col-12 col-md-6  py-5" href="#{{ textRef }}">
+		<div class="bg-accent rounded-4 col-12 col-md-6  py-5 d-flex justify-content-center" href="#{{ textRef }}">
 			<span class="text-center text-capitalize white-text" style="font-size: 2.5rem;">{{ headText }}</span>
 		</div>
 	</div>
