--- a/templates/index/contact.twig
+++ b/templates/index/contact.twig
@@ -1,8 +1,11 @@
 {# templates/contact.html.twig #}
 
 <section id="contact" class="bg-accent-dark" style="min-height: 86vh;">
-    {% include 'index/IndexHeader.twig' with {'upRef': 'projects', 'textRef': 'contact', 'headText': "Let's Chat! 🐼", 'darkbg': true} %}
-
+    <div class="w-100 d-flex justify-content-center ">
+		<div class="bg-main rounded-4 col-12 col-md-6  py-5 d-flex justify-content-center" >
+			<span class="text-center text-capitalize white-text" style="font-size: 2.5rem;">Let's Chat! 🐼</span>
+		</div>
+	</div>
     <div class="container px-3 py-4">
         <div class="row justify-content-center">
             <div class="col-md-8">
