--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -51,7 +51,7 @@
 	<body>
 		<div id="loading" class="position-fixed container-fluid p-0" style="z-index: 900000; height:101vh; background-color:#111111; display:block;">
 			<div class="row d-flex align-items-center justify-content-center p-5 w-100 h-100" >
-				<img class="" src="{{ asset('loadgif.gif') }}" style="width: 40vw; height:auto;" alt="Loading..." />
+				<img class="" src="{{ asset('loadgif.gif') }}" style="width: 30rem; height:auto;" alt="Loading..." />
 			</div>
 		</div>
 
