--- a/templates/index/ProjectsHighlights.twig
+++ b/templates/index/ProjectsHighlights.twig
@@ -23,14 +23,14 @@
 
 					{% for i in 0..0 %}
 
-						<div class="col-sm-6 col-lg-4 col-xl-3 px-3 py-2  {{ loop.index > 6 ? (loop.index > 10 ? 'd-none d-lg-block' : 'd-none d-md-block') : '' }} ">
-							<div class="rounded-4 row justify-content-center bg-dark mx-auto shadow-custom " style="overflow:hidden; aspect-ratio: 0.75;">
+						<div class="col-6 col-lg-4 col-xl-3 px-3 py-2  {{ loop.index > 6 ? (loop.index > 10 ? 'd-none d-lg-block' : 'd-none d-md-block') : '' }} ">
+							<div class="rounded-4 row justify-content-center bg-dark mx-auto shadow-custom " style="overflow:hidden; aspect-ratio: 0.7;">
 								<div class=" w-100 h-50 p-0 d-flex align-items-center" style="overflow:hidden;">
 									<img src="{{ project.iconref }}" style="width:100%;" alt="project not loading">
 								</div>
 								<div class='px-1'>
-									<h5 class="p-0 m-0 accent-color text-center">Card title</h5>
-									<p class=" m-0">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+									<p class="m-0 accent-color text-center"><strong>{{ project.name }}</strong></p>
+									<p class=" m-0 d-none d-md-block">{{ project.description }}</p>
 								</div>
 								<a href="{{project.linkref ?? '#' }}" class="btn btn-main"></a>
 							</div>
