--- a/templates/index/contact.twig
+++ b/templates/index/contact.twig
@@ -1,36 +1,41 @@
 {# templates/contact.html.twig #}
 
 <section id="contact" class="bg-accent-dark" style="min-height: 86vh;">
-    <div class="w-100 d-flex justify-content-center ">
-		<div class="bg-main rounded-4 col-12 col-md-6  py-5 d-flex justify-content-center" >
+	<div class="w-100 d-flex justify-content-center ">
+		<div class="bg-main rounded-4 col-12 col-md-6  py-5 d-flex justify-content-center">
 			<span class="text-center text-capitalize white-text" style="font-size: 2.5rem;">Let's Chat! 🐼</span>
 		</div>
 	</div>
-    <div class="container px-3 py-4">
-        <div class="row justify-content-center">
-            <div class="col-md-8">
-                <form id="contactForm" action="{{ path('app_email') }}" method="post" class="needs-validation row justify-content-center" novalidate>
-                    <div class="mb-3 col-12 col-md-6">
-                        <label for="name" class="form-label">Name:</label>
-                        <input type="text" class="form-control" id="name" name="name" required>
-                        <div class="invalid-feedback">Please enter your name.</div>
-                    </div>
+	<div class="container px-3 py-4">
+		<div class="row justify-content-center">
+			<div class="col-md-8">
+				<form id="contactForm" action="{{ path('app_email') }}" method="post" class="needs-validation row justify-content-center" novalidate>
+					<div class="mb-3 col-12 col-md-6">
+						<label for="name" class="form-label">Name:</label>
+						<input type="text" class="form-control" id="name" name="name" required>
+						<div class="invalid-feedback">Please enter your name.</div>
+					</div>
+					<div class="mb-3 col-12 col-md-6">
+						<label for="email" class="form-label">Email:</label>
+						<input type="email" class="form-control" id="email" name="email" required>
+						<div class="invalid-feedback">Please enter a valid email address.</div>
+					</div>
 
-                    <div class="mb-3 col-12 col-md-6">
-                        <label for="email" class="form-label">Email:</label>
-                        <input type="email" class="form-control" id="email" name="email" required>
-                        <div class="invalid-feedback">Please enter a valid email address.</div>
-                    </div>
+					<div class="mb-3 col-12">
+						<label for="subject" class="form-label">Subject:</label>
+						<input type="text" class="form-control" id="subject" name="subject" maxlength="50" required>
+						<div class="invalid-feedback">Please enter a subject.</div>
+					</div>
 
-                    <div class="mb-3">
-                        <label for="message" class="form-label">Message:</label>
-                        <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
-                        <div class="invalid-feedback">Please enter a message.</div>
-                    </div>
+					<div class="mb-3">
+						<label for="message" class="form-label">Message:</label>
+						<textarea class="form-control" id="message" name="message" rows="4" required></textarea>
+						<div class="invalid-feedback">Please enter a message.</div>
+					</div>
 
-                    <button type="submit" class="rounded-pill w-50 btn custom-btn bg-accent text-white">Submit</button>
-                </form>
-            </div>
-        </div>
-    </div>
+					<button type="submit" class="rounded-pill w-50 custom-btn bg-accent text-white p-2">Submit</button>
+				</form>
+			</div>
+		</div>
+	</div>
 </section>
