--- a/templates/projects/Projects.twig
+++ b/templates/projects/Projects.twig
@@ -10,7 +10,7 @@
 
 {% block body %}
 
-	<section id="projects" class="bg-main-dark px-2" style="min-height: 100vh;">
+	<section class="bg-accent-dark px-2" style="min-height: 100vh;">
 		<div class="w-100 d-flex justify-content-center ">
 			<div class="bg-accent rounded-4 col-12 col-md-6  py-5 d-flex justify-content-center" href="#{{ textRef }}">
 				<span class="text-center text-capitalize white-text" style="font-size: 2.5rem;">{{ headText }}</span>
