--- a/templates/index/GameHighlights.twig
+++ b/templates/index/GameHighlights.twig
@@ -110,7 +110,7 @@
 
 
 <script>
-	let currentRotation = 0;
+	var currentRotation = 0;
 
 function rotateCarousel(direction) {
 const rotationIncrement = 360 / direction; // Degrees to rotate per step
