--- a/templates/pausemenu.html.twig
+++ b/templates/pausemenu.html.twig
@@ -1,16 +1,23 @@
 <!-- Collapsible Navbar -->
-<div class=" position-sticky fixed-top d-flex justify-content-center" style="width:100%; z-index: 1040;">
-	<div class="collapse navbar-collapse collapse d-flex position-relative justify-content-center w-100" id="navbarCollapse">
+<div class=" position-fixed fixed-top row p-0 m-0 justify-content-center" style="width:100%; z-index: 1040;">
+	{% for label, messages in app.flashes %}
+		{% for message in messages %}
+			<div class="alert alert-{{ label }} d-flex justify-content-center m-0">
+				{{ message }}
+			</div>
+		{% endfor %}
+	{% endfor %}
+	<div class="collapse navbar-collapse collapse d-flex position-relative justify-content-center p-0 w-100" id="navbarCollapse">
 		<nav class=" navbar navbar-dark navbar-expand-lg sin-down-div row justify-content-center" style="scale:100%; ">
 			<button class=" col-auto navbar-toggler bg-dark rounded-pill p-2 border-1 border-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 				<img style="height: 7vh; width: auto;" src="{{ asset('foundtexaspanda.svg') }}" alt="foundtexaspanda"/>
 			</button>
 			<div class="align-items-center row p-0 m-0 w-100">
-				<a class="bg-dark rounded-circle col-12 col-lg-auto p-1 m-0 d-none d-lg-block position-absolute top-0 start-0" href="/" style="height: 7rem; aspect-ratio:1;">
+				<a class="bg-dark rounded-circle col-12 col-lg-auto p-1 m-0 d-none d-lg-block position-absolute top-0 start-0" href="/" style="height: 7rem; aspect-ratio:1; z-index: 1040;">
 					<img style="height: 100%; width: auto;" src="{{ asset('foundtexaspanda.svg') }}" alt="foundtexaspanda"/>
 				</a>
 				<div class="col-12 col-lg">
-					<div id="navbarNavAltMarkup" class="collapse navbar-collapse row py-2 justify-content-evenly">
+					<div id="navbarNavAltMarkup" class="collapse navbar-collapse row py-5 py-md-2 justify-content-evenly">
 						<a class="col-12 col-lg-auto my-2 text-center" href="/timeline">TIMELINE</a>
 						<a class="col-12 col-lg-auto my-2 text-center" aria-current="page" href="{{ path('app_game_projects', { type: 'game' }) }}">GAMES</a>
 						<a class="col-12 col-lg-auto my-2 text-center" href="{{ path('app_game_projects', { type: 'web' }) }}">WEB APPS</a>
@@ -20,6 +27,7 @@
 		</nav>
 	</div>
 </div>
+
 
 <button class="custom-btn position-fixed rounded-4 bg-accent d-flex align-items-center" style="z-index: 1050; top: 1rem; right: 1rem;" onclick="playSound('audiopress')" data-bs-target="#pauseMenuModal" aria-label="Pause menu button" data-bs-toggle="modal" type="button">
 	<i class="fa fa-home my-2 mx-1 fa-2xl" aria-hidden="true" style="color: #ffffff;"></i>
@@ -134,8 +142,8 @@ return value;
 }
 
 // JavaScript to toggle the collapse state
-const collapseOnButton = document.getElementById("collapseOnButton");
-const collapseOffButton = document.getElementById("collapseOffButton");
+var collapseOnButton = document.getElementById("collapseOnButton");
+var collapseOffButton = document.getElementById("collapseOffButton");
 
 collapseOnButton.addEventListener("click", function () {
 document.querySelector(".navbar-collapse").classList.remove("d-none");
@@ -153,7 +161,7 @@ setNavbarCollapseState('off');
 });
 
 // Initially, start with "On" enabled and "Off" disabled
-const savedState = getNavbarCollapseState();
+var savedState = getNavbarCollapseState();
 if (savedState === 'on') {
 document.querySelector(".navbar-collapse").classList.remove("d-none");
 collapseOnButton.disabled = true;
