--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -285,3 +285,19 @@ input[type="range"].cool-range::-moz-range-thumb {
   color: #FFFFFF;
 }
 
+#bgcanvas, #other-bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+.content {
+  position: relative;
+  z-index: 1;
+  width: 100%;
+  padding: 20px;
+  overflow-y: auto;
+}
