--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,7 +22,6 @@
 
 		<!-- font-awesome -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-
 		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 		<!-- bootstrap
@@ -30,11 +29,6 @@
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 		 -->
-
-		<!-- SweetAlert CSS -->
-    	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
-    	<!-- SweetAlert JS -->
-    	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 		
 		<!-- bootstrap 
 		<link href="{{ asset('bootstrap/css/bootstrap.css') }}" rel="stylesheet">
@@ -53,6 +47,8 @@
 
 		<link href="{{ asset('styles/app.css') }}" rel="stylesheet">
 		<script src="{{ asset('js/essentials.js') }}"></script>
+		<!-- bootstrap-->
+		<script src="{{ asset('js/audioPlayer.js') }}"></script>
 	</head>
 	
 	<body>
@@ -114,7 +110,7 @@
 
 		{% endblock %}
 
-		<div style="margin-top: 10vh;">
+		<div class="w-100 p-0 mx-0" style="margin-top: 10vh;">
 
 		{% block body %}{% endblock %}
 
