--- a/templates/index/GameHighlights.twig
+++ b/templates/index/GameHighlights.twig
@@ -53,7 +53,7 @@
 	}
 </style>
 
-<div class=" container-md row px-lg-5 py-3">
+<div class=" container-md row p-0 m-0 px-lg-5 py-3">
 	<div id="games" class=" rounded-5 col-12 col-md-8">
 
 		<div class="w-100 d-flex justify-content-center">
