--- a/templates/index/ProjectsHighlights.twig
+++ b/templates/index/ProjectsHighlights.twig
@@ -10,11 +10,11 @@
 <section id="projects" class=" p-lg-5" style="min-height: 100vh;">
 
 
-	<div class="d-flex flex-column justify-content-center align-items-center" style="min-height: 75vh; width: 100%; opacity:0.9;">
+	<div class="d-flex flex-column justify-content-center align-items-center" style="min-height: 70vh; width: 100%; opacity:0.9;">
 
-		<div class="container rounded-5 bg-main-gradient  m-3 my-md-4 p-3 shadow-custom">
+		<div class="container rounded-5 bg-main-gradient  mx-3 my-md-1 p-3 shadow-custom">
 			<div class="w-100 d-flex justify-content-center ">
-				<div class="bg-accent rounded-4 col-12 col-md-6  py-4 d-flex justify-content-center" href="#{{ textRef }}">
+				<div class="bg-accent rounded-4 col-12 col-md-6  py-2 d-flex justify-content-center" href="#{{ textRef }}">
 					<div class=" p-0 m-0 stack" style="--stacks: 3;">
 						<span class="p-3 text-center" style="--index: 0;">WEB HIGHLIGHTS</span>
 						<span class="p-3 text-center" style="--index: 1;">WEB HIGHLIGHTS</span>
