--- a/templates/index/contact.twig
+++ b/templates/index/contact.twig
@@ -1,9 +1,14 @@
-<section id="contact" class="bg-accent-dark" style="min-height: 86vh;">
-    <div class="w-100 d-flex justify-content-center">
-        <div class="bg-main rounded-4 col-12 col-md-6 py-5 d-flex justify-content-center">
-            <span class="text-center text-capitalize white-text" style="font-size: 2.5rem;">Let's Chat! 🐼</span>
-        </div>
-    </div>
+<section id="contact" class="bg-accent-dark" style="min-height: 50vh;">
+
+    <div class="w-100 d-flex justify-content-center ">
+		<div class="bg-main rounded-4 col-12 col-md-6  py-2 d-flex justify-content-center" >
+			<div class=" p-0 m-0 stack" style="--stacks: 3;">
+				<span class="p-3 text-center" style="--index: 0;">Let's Chat! 🐼</span>
+				<span class="p-3 text-center" style="--index: 1;">Let's Chat! 🐼</span>
+				<span class="p-3 text-center" style="--index: 2;">Let's Chat! 🐼</span>
+			</div>
+		</div>
+	</div>
     <div class="container px-3 py-4">
         <div class="row justify-content-center">
             <div class="col-md-8">
