--- a/templates/index/footer.twig
+++ b/templates/index/footer.twig
@@ -16,10 +16,13 @@
 	</div>
 </div>
 
-<footer class="sin-up-div bg-dark text-white text-center p-5" style="min-height: 20vh; margin-top: -2.5vh; scale:102%; ">
+<div class="{{bg ?? 'bg-accent-dark'}}">
+
+<footer class="sin-up-div bg-dark text-white text-center p-5" style="min-height: 20vh;">
 	<p>&copy; 2024 . All Rights Reserved.</p>
 
 	<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#cookiePolicyModal">
 		cookies-policy
 	</button>
 </footer>
+</div>
