--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,7 +1,7 @@
 body {
   width: 100vw;
   background-color: #000000;
-  
+  padding-right: 0px !important;
 }
 
 a, label, p, h1, h2, h3, h4, h5, h6, li, span {
