--- a/templates/index/AboutMe.twig
+++ b/templates/index/AboutMe.twig
@@ -9,7 +9,7 @@
     <div class="rounded-circle bg-dark border border-light d-none d-md-block">
         <img class="m-2" style="height: 15vh; width: auto;" src="{{ asset('foundtexaspanda.svg') }}" alt="foundtexaspanda"/>
     </div>
-    <div class="rounded-trapezoid container-md col-lg-6 bg-light opacity-75 p-1 d-flex flex-column align-items-center justify-content-center my-3" style="min-height: 35vh;">
+    <div class="rounded-trapezoid container-md col-lg-6 bg-light p-1 d-flex flex-column align-items-center justify-content-center my-3" style="min-height: 35vh; opacity:0.9;">
         <div class=" container-fluid rounded-trapezoid bg-main-dark-translucent d-flex flex-column align-items-center justify-content-around" style="min-height: 35vh;">
             <div class="row mt-md-0 mt-md-3 p-0">
                 <h2 class="p-md-2 p-0 my-1 text-center accent-color"> <i class="fa fa-laptop fa-xs" aria-hidden="true"></i> Web & Game Dev <i class="fa fa-gamepad fa-md " aria-hidden="true"></i> </h2>
